--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,9 +1,9 @@
 {
   "datasource": {
-	"dbUrl": "jdbc:mysql://localhost:3306/device_manage?useSSL=false",
+	"dbUrl": "jdbc:mysql://192.168.1.128:3306/erp?characterEncoding=utf-8&useSSL=true&serverTimezone=UTC",
 	"driverClassName": "com.mysql.jdbc.Driver",
 	"username": "root",
-	"password": "root",
+	"password": "123456",
 	"tables": 
 	{
       "t_user": "User"
@@ -14,59 +14,52 @@
       "name": "beanClass",
       "templateFilename": "beanClass.ftl",
       "outputPath": "output/bean",
-      "outputFilenameRule": "{upperCaseName}.java",
+      "outputFilenameRule": ".java",
       "options": {
-        "pons": "org.bigmonkey.robot.entity.po"
+        "pons": "com.agent.erp.model"
       }
     },
     {
       "name": "mapperClass",
       "templateFilename": "mapperClass.ftl",
       "outputPath": "output/mapper",
-      "outputFilenameRule": "{upperCaseName}Mapper.java",
+      "outputFilenameRule": "Mapper.java",
       "options": {
-        "pons": "org.bigmonkey.robot.entity.po",
-        "mpns": "org.bigmonkey.robot.mapper"
+        "pons": "com.agent.erp.model",
+        "mpns": "com.agent.erp.dao"
       }
     },
     {
       "name": "mapperXml",
       "templateFilename": "mapperXml.ftl",
       "outputPath": "output/mapperXml",
-      "outputFilenameRule": "{upperCaseName}Mapper.xml",
+      "outputFilenameRule": "Mapper.xml",
       "options": {
-        "mapperns": "org.bigmonkey.robot.mapper",
-        "pons": "org.bigmonkey.robot.entity.po"
+        "mapperns": "com.agent.erp.dao",
+        "pons": "com.agent.erp.model"
       }
     },
     {
       "name": "serviceInterface",
       "templateFilename": "serviceInterface.ftl",
       "outputPath": "output/service",
-      "outputFilenameRule": "I{upperCaseSimpleName}Service.java",
+      "outputFilenameRule": "Service.java",
       "options": {
-        "pons": "org.bigmonkey.robot.entity.po",
-        "itns": "org.bigmonkey.robot.service"
+        "pons": "com.agent.erp.model",
+        "itns": "com.agent.erp.service"
       }
     },
     {
       "name": "serviceImpl",
       "templateFilename": "serviceImpl.ftl",
       "outputPath": "output/serviceImpl",
-      "outputFilenameRule": "{upperCaseSimpleName}ServiceImpl.java",
+      "outputFilenameRule": "ServiceImpl.java",
       "options": {
-        "pons": "org.bigmonkey.robot.entity.po",
-        "itns": "org.bigmonkey.robot.service",
-        "mpns": "org.bigmonkey.robot.mapper",
-        "imns": "org.bigmonkey.robot.service.impl"
+        "pons": "com.agent.erp.model",
+        "itns": "com.agent.erp.service",
+        "mpns": "com.agent.erp.dao",
+        "imns": "com.agent.erp.service.impl"
       }
-    },
-    {
-      "name": "deviceController",
-      "templateFilename": "deviceController.ftl",
-      "outputPath": "output/devCtrl",
-      "outputFilenameRule": "{upperCaseSimpleName}Controller.java",
-      "options": {}
     }
   ]
 }
